fix: panel left jumps page top

--- a/css/nativedroid2.css
+++ b/css/nativedroid2.css
@@ -173,6 +173,20 @@ code {
  * Panel
  */
 
+.ui-panel.ui-panel-open {
+    position:fixed;
+}
+
+.ui-panel-position-left > .ui-panel-inner {
+    position: absolute;
+    top: 1px;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 .ui-panel-open {
 	max-width: 90%;
 	width: 304px;
@@ -883,7 +897,7 @@ html >body .ui-rangeslider .ui-rangeslider-sliders .ui-slider-track:first-child 
  */
 
 .ui-popup .ui-header .ui-title {
-	margin-left: 1em;
+/*	margin-left: 1em;*/
 }
 
 .ui-popup {
